AC_INIT(gettext-lint, 0.3.1, morais@kde.org)
AM_INIT_AUTOMAKE
AM_PATH_PYTHON(2.0)

AC_OUTPUT([
Makefile
gettext-lint.spec
etc/Makefile
doc/Makefile
src/Makefile
src/POFileChecker
src/POFileConsistency
src/POFileEquiv
src/POFileFill
src/POFileSpell
src/POFileStatus
src/POTFileChecker
], [chmod +x $(ls src/PO*.in | sed s/.in//g)])
